# projeto_aed2

./: Cargo.toml  README.md  collect_data.sh  gen_data.sh  gen_plots.sh  ingest.sh  plot_script.plg
.cargo/: config.toml
data/: format.example
src/: client.rs  client_handler.rs  cmd_args.rs  lib.rs  main.rs  server.rs
subject_videos/: README.md
