[package]
name = "udp_compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "^1", features = ["full", "tracing"] }
tracing = "^0"
tracing-subscriber = "^0"
tracing-futures = "^0"
console-subscriber = "^0"

num_cpus = "^1"
futures = "^0"
serde = { version = "^1", features = ["derive"] }
bincode = "^1"
clap = { version = "^4", features = ["derive", "env"] }
rand = "^0"
